Atomics.wait throws when called on the main thread.

BUG=686604
R=jochen@chromium.org

Review-Url: https://codereview.chromium.org/2660423003
Cr-Commit-Position: refs/heads/master@{#447639}

Former-commit-id: feca6e8c3446e2cb514eb72ef14e9b4dd44df163