third_party/WebKit/LayoutTests/fast/workers/resources/worker-atomics-wait.js
@@ -1,0 +1,11 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+self.addEventListener('message', function(e) {
+    var view = e.data;
+    try {
+        Atomics.wait(view, 0, 0, 0);
+        postMessage("PASS: Atomics.wait is allowed in a worker.");
+    } catch(e) {
+        postMessage("FAIL: Atomics.wait is not allowed in a worker.");
+    }
+    postMessage("DONE");
+});
